src/About.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.go-back-container{
    @apply flex justify-center relative bottom-0  h-0
}

.go-back-btn{
    @apply absolute bottom-16 text-xl font-semibold left-0 right-0 w-32 mx-auto z-50
}

body.dark-mode .go-back-btn{
    @apply bottom-[4.15rem]
}

.go-back-btn:hover{
    transform: scale(1.05)
}

.go-back-border{
    @apply absolute bottom-16
}

.about-title-container{
    @apply mb-12
}

.team-member-container{
    @apply mb-10
}

.team-member{
    @apply font-bold
}

.about-icon-container{
    @apply absolute bottom-0 right-0 left-0
}

.linkedin{
    @apply  text-blue-600 underline
}

@media(min-width: 600px){
    .about-icon-container{
        @apply absolute bottom-0 right-0 left-0 
    }

    .team-member-container{
        @apply mb-8
    }
}

@media(min-width: 1280px){
    .about-icon-container{
        @apply absolute bottom-12 right-0 left-0 
    }
    
    .about-title-container{
        @apply mb-2
    }

    .go-back-border{
        @apply absolute bottom-[3.9rem]
    }
    
    
}

